--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 	"dependencies": {
 		"dompurify": "^3.0.6",
 		"marked": "^10.0.0",
-		"openai": "^4.20.0"
+		"openai": "^4.20.0",
+		"p5": "^1.8.0",
+		"p5-svelte": "^3.1.2"
 	}
 }
