--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
 		"@tailwindcss/typography": "^0.5.10",
+		"@vercel/analytics": "^1.1.1",
 		"autoprefixer": "^10.4.16",
 		"daisyui": "^4.4.7",
 		"eslint": "^8.28.0",
