--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^3.1.0",
 		"dompurify": "^3.0.6",
 		"marked": "^10.0.0",
 		"openai": "^4.20.0",
